# rust_icc_mon

./: Cargo.toml  README.md
src/: args.rs  counter.rs  custom_err.rs  iccp.rs  image_meta.rs  mailer.rs  main.rs  my_image.rs  process.rs  rgb.rs  static_iecsrgb.rs
