[package]
name = "icc"
version = "0.1.0"
authors = ["Alexander Tchepournov"]
edition = "2018"
license = "MIT"
[dependencies]
rgb = "0.8.27"
rayon = "1.5.1"
image = "0.23.14"
lcms2 = "5.4.1"
img-parts = "0.2.3"
webp = "0.1.3"
rexif = "0.7.3"
lettre = { git = "https://github.com/lettre/lettre.git" }
[dev-dependencies]
openssl = "0.10.35"
openssl-sys = "0.9.65"
